--- a/roles/docker-mantisbt/tasks/main.yml
+++ b/roles/docker-mantisbt/tasks/main.yml
@@ -152,7 +152,7 @@
     name: '{{ mantisbt_db_container_name }}'
     detach: true
     restart_policy: '{{ docker_restart_policy }}'
-    volumes-from:
+    volumes_from:
       - '{{ mantisbt_db_dv_name }}'
     image: '{{ mantisbt_db_image_name }}:{{ docker_image_tag }}'
 
@@ -167,7 +167,7 @@
       -'{{ openldap_container_name }}:mantisbt_ldap'
       -'{{ mantisbt_db_container_name }}:mantisbt_db'
       -'{{ exim4_container_name }}:{{ container_addr_map.exim4.hostname }}'
-    volumes-from: 
+    volumes_from: 
       - '{{ openssl_dv_name }}'
       - '{{ mantisbt_dv_name }}'
     env: 
