--- a/roles/docker-gitlab/tasks/main.yml
+++ b/roles/docker-gitlab/tasks/main.yml
@@ -85,6 +85,7 @@
     name: '{{ gitlab_image_name }}'
     tag: '{{ docker_image_tag }}'
     path: '{{ docker_projects_dir }}/docker-gitlab'
+    force: "{{ docker_image_force_build }}"
 
 # Data volume image is now the same as the container image
 #- name: build image
@@ -92,6 +93,7 @@
 #    image_name: '{{ gitlab_dv_image_name }}'
 #    image_tag: '{{ docker_image_tag }}'
 #    dockerfile_dir: '{{ docker_projects_dir }}/docker-gitlab'
+#    force: "{{ docker_image_force_build }}"
 
 # *****************************************************************************
 # Create the data volumes
