--- a/roles/docker-mantisbt/tasks/main.yml
+++ b/roles/docker-mantisbt/tasks/main.yml
@@ -84,6 +84,7 @@
     name: '{{ mantisbt_image_name }}'
     tag: '{{ docker_image_tag }}'
     path: '{{ docker_projects_dir }}/docker-mantisbt'
+    force: "{{ docker_image_force_build }}"
 
 - name: Checkout db repo
   git:
@@ -96,6 +97,7 @@
     name: '{{ mantisbt_db_image_name }}'
     tag: '{{ docker_image_tag }}'
     path: '{{ docker_projects_dir }}/docker-mysql-data'
+    force: "{{ docker_image_force_build }}"
 
 # *****************************************************************************
 # copy the MySQL config to the restore directory
