--- a/roles/docker-mantisbt/tasks/main.yml
+++ b/roles/docker-mantisbt/tasks/main.yml
@@ -84,7 +84,8 @@
     name: '{{ mantisbt_image_name }}'
     tag: '{{ docker_image_tag }}'
     path: '{{ docker_projects_dir }}/docker-mantisbt'
-  
+    force: "{{ docker_image_force_build }}"
+
 # *****************************************************************************
 # Create the data volumes
 
