--- a/roles/docker-openldap/tasks/main.yml
+++ b/roles/docker-openldap/tasks/main.yml
@@ -137,6 +137,7 @@
     name: '{{ phpldapadmin_image_name }}'
     tag: '{{ docker_image_tag }}'
     path: '{{ docker_projects_dir }}/docker-phpldapadmin'
+    force: "{{ docker_image_force_build }}"
 
 - name: start container (phpldapadmin)
   docker_container:
