--- a/ansible-playbook/site.yml
+++ b/ansible-playbook/site.yml
@@ -29,7 +29,7 @@
   - role: bacula-console
   - role: bacula-script
     assemble_scripts: false
-  - role: bacula-catalog
+  # - role: bacula-catalog
 
 - name: Prepare Docker host systems
   hosts: docker-hosts
