--- a/roles/docker-networking/tasks/ip_addr.yml
+++ b/roles/docker-networking/tasks/ip_addr.yml
@@ -23,9 +23,9 @@
   command: >
     nmcli connection 
     modify '{{ network_connection }}' 
-    +ipv4.addresses '{{ ip_addr }}/{{ subnet | ipaddr("prefix") }}'
+    +ipv4.addresses '{{ ip_addr }}'
   vars:
-    ip_addr: '{{ lookup("vars", item + "_ip_addr") }}'
+    ip_addr: '{{ lookup("vars", item + "_ip_addr") }}/{{ subnet | ipaddr("prefix") }}'
   loop: "{{ services }}"
  
 - sysctl:
