--- a/ansible-playbook/site.yml
+++ b/ansible-playbook/site.yml
@@ -60,7 +60,7 @@
   roles:
   - name: Configure Docker networking
     role: docker-networking
-    net_connection: '{{ daedalus_net_connection }}'
+    network_connection: '{{ daedalus_net_connection }}'
     subnet: '{{ daedalus_subnet }}'
     services:
     - svn
