--- a/ansible-playbook/site.yml
+++ b/ansible-playbook/site.yml
@@ -31,7 +31,7 @@
     - base_images
   - name: Configure Docker networking
     role: docker-networking
-    net_connection: '{{ daedalus_net_connection }}'
+    network_connection: '{{ daedalus_net_connection }}'
     subnet: '{{ daedalus_subnet }}'
     services:
     - svn
