--- a/docker/docker-exim4/etc/exim4/update-exim4.conf.conf
+++ b/docker/docker-exim4/etc/exim4/update-exim4.conf.conf
@@ -18,7 +18,7 @@
 
 dc_eximconfig_configtype='internet'
 dc_other_hostnames='novatech-llc.com'
-dc_local_interfaces='127.0.0.1 ; ::1'
+dc_local_interfaces=''
 dc_readhost=''
 dc_relay_domains=''
 dc_minimaldns='false'
