Add new role to configure daedalus host

--- a/ansible-playbook/site.yml
+++ b/ansible-playbook/site.yml
@@ -1,6 +1,16 @@
 ---
 # This playbook deploys the whole application stack in this site.
 
+- name: Configure daedalus partitioning
+  hosts: daedalus
+  remote_user: ansibleremote
+  become: true
+  become_user: root
+  become_method: sudo
+  tags: daedalus
+  roles: 
+  - role: daedalus
+
 - name: Bacula
   hosts: bacula
   remote_user: ansibleremote
