Refresh of update-gitlab-to-10-1

--- a/roles/docker-gitlab/defaults/main.yml
+++ b/roles/docker-gitlab/defaults/main.yml
@@ -18,17 +18,19 @@ gitlab_db_user: novatech
 gitlab_image_repo: 'https://github.com/novatechweb/docker-gitlab.git'
 gitlab_image_name: '{{ docker_registry_username }}/gitlab'
 gitlab_dv_image_name: '{{ docker_registry_username }}/gitlab'
-gitlab_db_image_name: '{{ docker_registry_username }}/postgres'
-redis_image_name: '{{ docker_registry_username }}/redis'
+gitlab_db_image_name: 'postgres'
+gitlab_db_image_tag: '9.4'
+redis_image_name: 'redis'
+redis_image_tag: '3.0'
 
 # the name of the gitlab container
 gitlab_container_name: '{{ docker_name_prefix }}gitlab'
 
 # the name of the redis container for gitlab
-gitlab_redis_container_name: '{{ docker_name_prefix }}gitlab_redis'
+gitlab_redis_container_name: '{{ docker_name_prefix }}gitlab-redis'
 
 # the name of the postgres container for gitlab
-gitlab_db_container_name: '{{ docker_name_prefix }}gitlab_db'
+gitlab_db_container_name: '{{ docker_name_prefix }}gitlab-db'
 
 # the name of the data-volume used by the container
 gitlab_dv_name: '{{ docker_name_prefix }}gitlab_DV'
