--- a/roles/docker-gitlab/tasks/main.yml
+++ b/roles/docker-gitlab/tasks/main.yml
@@ -65,6 +65,13 @@
     get_md5: False
   register: st_gitlab_restore
 
+  # *****************************************************************************
+# upgrade?
+
+- include_tasks: upgrade.yml
+  when:
+  - upgrade
+
 # *****************************************************************************
 # Update or make the image.
 
@@ -149,7 +156,8 @@
       - '{{ gitlab_dv_name }}:/home/git/data'
       - '{{ gitlab_docker_backup_dir }}:/home/git/backups'
     env:
-      DEBUG_ENTRYPOINT: 1
+      DEBUG: 'true'
+      DEBUG_ENTRYPOINT: 'true'
       GITLAB_TIMEZONE: "America\\/Chicago"
       GITLAB_HOST: "{{ gitlab_hostname }}"
       GITLAB_SSH_HOST: "{{ gitlab_hostname }}"
@@ -168,11 +176,11 @@
 
 - name: Wait for gitlab to be fully running
   uri:
-    url: 'http://{{ gitlab_hostname }}/users/sign_in'
+    url: 'https://{{ gitlab_hostname }}/users/sign_in'
   register: health
-  retries: 60
-  delay: 5
-  until: health.status == 200
+  retries: 10
+  delay: 30
+  until: health is success
 
 # *****************************************************************************
 # restore?
