--- a/roles/gitlab-omnibus/tasks/restore.yml
+++ b/roles/gitlab-omnibus/tasks/restore.yml
@@ -39,13 +39,8 @@
 # restore the gitlab backup
 
 - name: Copy backup files to container
-  copy:
-    remote_src: yes
-    src: '{{ item.path }}'
-    dest: '{{ gitlab_docker_backup_dir }}/'
-    owner: root
-    group: root
-    mode: 'u=rwx,g=rwx,o=rwx'
+  command: >
+      docker cp '{{ item.path }}' {{ gitlab_container_name }}:'{{ gitlab_bv_mountpoint }}'
   loop: "{{ gitlab_backup.files }}"
 
 - name: shut down gitlab services for restoration
@@ -59,11 +54,11 @@
   block:
   - name: find gitlab secrets archive
     find:
-      path: '{{ gitlab_docker_backup_dir }}'
+      path: '{{ gitlab_docker_restore_dir }}'
       pattern: "*_{{gitlab_version}}_gitlab_etc.tgz"
     register: backup_files
   - set_fact:
-      backup_file: "/mnt/backups/{{backup_files.files[0]['path'] | basename}}"
+      backup_file: "{{gitlab_bv_mountpoint}}/{{backup_files.files[0]['path'] | basename}}"
     when: backup_files.matched > 0
   - command: >
       docker exec -t {{ gitlab_container_name }}
@@ -74,11 +69,11 @@
   block:
   - name: find gitlab data archive
     find:
-      path: '{{ gitlab_docker_backup_dir }}'
+      path: '{{ gitlab_docker_restore_dir }}'
       pattern: "*_{{gitlab_version}}_gitlab_backup.tar"
     register: backup_files
   - set_fact:
-      backup_file: "/mnt/backups/{{backup_files.files[0]['path'] | basename | replace('_gitlab_backup.tar','')}}"
+      backup_file: "{{gitlab_bv_mountpoint}}/{{backup_files.files[0]['path'] | basename | replace('_gitlab_backup.tar','')}}"
     when: backup_files.matched > 0
   - command: >
       docker exec -t {{ gitlab_container_name }}
