--- a/roles/docker-mantisbt/tasks/main.yml
+++ b/roles/docker-mantisbt/tasks/main.yml
@@ -140,6 +140,8 @@
       MYSQL_ROOT_PASSWORD: '{{ mantisbt_db_root_password }}'
       MYSQL_USER: '{{ mantisbt_db_user }}'
       MYSQL_PASSWORD: '{{ mantisbt_db_password }}'
+    networks:
+      - name: '{{ docker_network_frontend }}'
 
 - name: wait for initialization to complete
   shell: >
@@ -162,14 +164,12 @@
     name: '{{ mantisbt_container_name }}'
     detach: true
     restart_policy: '{{ docker_restart_policy }}'
-    hostname: '{{ container_addr_map.mantisbt.hostname }}'
-    ports: '{{ container_port_map.mantisbt.port_args }}'
-    link:
-      - '{{ openldap_container_name }}:mantisbt_ldap'
-      - '{{ mantisbt_db_container_name }}:mantisbt_db'
-      - '{{ exim4_container_name }}:{{ container_addr_map.exim4.hostname }}'
+    hostname: '{{ mantisbt_hostname }}'
+    ports: '{{ mantisbt_port_args }}'
+    networks:
+      - name: '{{ docker_network_frontend }}'
     env:
-      MANTISBT_HOSTNAME: '{{ container_addr_map.mantisbt.hostname }}'
+      MANTISBT_HOSTNAME: '{{ mantisbt_hostname }}'
       MANTISBT_MAIL_USER: 'mantis'
       MANTISBT_MAIL_PASSWORD: '{{ mantisbt_email_password | quote }}'
       MANTISBT_LDAP_PASSWORD: '{{ openldap_proxyagent_password | quote }}'
