--- a/roles/docker-mediawiki/defaults/main.yml
+++ b/roles/docker-mediawiki/defaults/main.yml
@@ -40,6 +40,8 @@ wiki_docker_restore_dir: '{{ bacula_dest }}{{ wiki_docker_backup_dir }}'
 wiki_static_backup_file: '/mediawiki.tar'
 wiki_database_backup_file: '/wikidb.sql'
 
+# Network names
+docker_network_frontend: 'frontend'
 
 # the name of the sql database used by mediawiki
 wiki_database_name: wikidb
