--- a/docker/buildbot-master/buildbot/master.cfg
+++ b/docker/buildbot-master/buildbot/master.cfg
@@ -68,8 +68,8 @@ c['www'] = {
 # installation's html.WebStatus home page (linked to the
 # 'titleURL') and is embedded in the title of the waterfall HTML page.
 
-c['title'] = "workspace"
-c['titleURL'] = "http://wiki"
+c['title'] = "NovaTech CI"
+c['titleURL'] = "http://git.novatech-llc.com/"
 
 # the 'buildbotURL' string should point to the location where the buildbot's
 # internal web server (usually the html.WebStatus page) is visible. This
