--- a/ansible-playbook/site.yml
+++ b/ansible-playbook/site.yml
@@ -90,6 +90,9 @@
     tags:
     - buildsystem_container
 
+- name: Setup the buildbot containers
+  import_playbook: buildbot.yml
+
 - name: Setup the Build System (Test Station) with repo data
   hosts: buildsystem
   remote_user: ansibleremote
